--- a/ImageProcessing.ioc
+++ b/ImageProcessing.ioc
@@ -5,65 +5,100 @@ CAD.provider=
 DCMI.IPParameters=JPEGMode,PCKPolarity
 DCMI.JPEGMode=DCMI_JPEG_DISABLE
 DCMI.PCKPolarity=DCMI_PCKPOLARITY_RISING
+Dma.DCMI.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.DCMI.0.EventEnable=DISABLE
+Dma.DCMI.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.DCMI.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.DCMI.0.Instance=DMA1_Stream0
+Dma.DCMI.0.MemBurst=DMA_MBURST_SINGLE
+Dma.DCMI.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.DCMI.0.MemInc=DMA_MINC_ENABLE
+Dma.DCMI.0.Mode=DMA_NORMAL
+Dma.DCMI.0.PeriphBurst=DMA_PBURST_SINGLE
+Dma.DCMI.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.DCMI.0.PeriphInc=DMA_PINC_DISABLE
+Dma.DCMI.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.DCMI.0.Priority=DMA_PRIORITY_LOW
+Dma.DCMI.0.RequestNumber=1
+Dma.DCMI.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.DCMI.0.SignalID=NONE
+Dma.DCMI.0.SyncEnable=ENABLE
+Dma.DCMI.0.SyncPolarity=HAL_DMAMUX_SYNC_RISING
+Dma.DCMI.0.SyncRequestNumber=1
+Dma.DCMI.0.SyncSignalID=HAL_DMAMUX1_SYNC_LPTIM1_OUT
+Dma.Request0=DCMI
+Dma.RequestsNb=1
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32H743ZIT6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DCMI
-Mcu.IP2=ETH
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=USART3
-Mcu.IP7=USB_OTG_FS
-Mcu.IPNb=8
+Mcu.IP10=USB_OTG_FS
+Mcu.IP2=DMA
+Mcu.IP3=ETH
+Mcu.IP4=I2C1
+Mcu.IP5=LPTIM1
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=SYS
+Mcu.IP9=USART3
+Mcu.IPNb=11
 Mcu.Name=STM32H743ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE4
 Mcu.Pin1=PE5
 Mcu.Pin10=PA2
-Mcu.Pin11=PA6
-Mcu.Pin12=PA7
-Mcu.Pin13=PC4
-Mcu.Pin14=PC5
-Mcu.Pin15=PB0
-Mcu.Pin16=PB13
-Mcu.Pin17=PB14
-Mcu.Pin18=PD8
-Mcu.Pin19=PD9
+Mcu.Pin11=PA4
+Mcu.Pin12=PA6
+Mcu.Pin13=PA7
+Mcu.Pin14=PC4
+Mcu.Pin15=PC5
+Mcu.Pin16=PB0
+Mcu.Pin17=PB13
+Mcu.Pin18=PB14
+Mcu.Pin19=PD8
 Mcu.Pin2=PE6
-Mcu.Pin20=PD10
-Mcu.Pin21=PG7
-Mcu.Pin22=PC6
-Mcu.Pin23=PC7
-Mcu.Pin24=PC8
-Mcu.Pin25=PC9
-Mcu.Pin26=PA8
-Mcu.Pin27=PA9
-Mcu.Pin28=PA11
-Mcu.Pin29=PA12
+Mcu.Pin20=PD9
+Mcu.Pin21=PD10
+Mcu.Pin22=PG7
+Mcu.Pin23=PC6
+Mcu.Pin24=PC7
+Mcu.Pin25=PC8
+Mcu.Pin26=PC9
+Mcu.Pin27=PA8
+Mcu.Pin28=PA9
+Mcu.Pin29=PA11
 Mcu.Pin3=PC13
-Mcu.Pin30=PD3
-Mcu.Pin31=PG11
-Mcu.Pin32=PG13
-Mcu.Pin33=PE1
-Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin30=PA12
+Mcu.Pin31=PD3
+Mcu.Pin32=PD6
+Mcu.Pin33=PD7
+Mcu.Pin34=PG11
+Mcu.Pin35=PG13
+Mcu.Pin36=PB6
+Mcu.Pin37=PB7
+Mcu.Pin38=PB9
+Mcu.Pin39=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
 Mcu.Pin4=PC14-OSC32_IN (OSC32_IN)
+Mcu.Pin40=VP_SYS_VS_Systick
 Mcu.Pin5=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin6=PH0-OSC_IN (PH0)
 Mcu.Pin7=PH1-OSC_OUT (PH1)
 Mcu.Pin8=PC1
 Mcu.Pin9=PA1
-Mcu.PinsNb=35
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
 MxCube.Version=6.7.0
 MxDb.Version=DB.6.0.70
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMAMUX1_OVR_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -86,7 +121,10 @@ PA12.Signal=USB_OTG_FS_DP
 PA2.Locked=true
 PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
-PA6.Mode=Slave_8_bits_Embedded_Synchro
+PA4.Locked=true
+PA4.Mode=Slave_8_bits_External_Synchro
+PA4.Signal=DCMI_HSYNC
+PA6.Mode=Slave_8_bits_External_Synchro
 PA6.Signal=DCMI_PIXCLK
 PA7.Locked=true
 PA7.Mode=RMII
@@ -108,6 +146,13 @@ PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red Led]
 PB14.Locked=true
 PB14.Signal=GPIO_Output
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Locked=true
+PB7.Mode=Slave_8_bits_External_Synchro
+PB7.Signal=DCMI_VSYNC
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC1.Locked=true
 PC1.Mode=RMII
 PC1.Signal=ETH_MDC
@@ -127,20 +172,24 @@ PC4.Signal=ETH_RXD0
 PC5.Locked=true
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
-PC6.Mode=Slave_8_bits_Embedded_Synchro
+PC6.Mode=Slave_8_bits_External_Synchro
 PC6.Signal=DCMI_D0
-PC7.Mode=Slave_8_bits_Embedded_Synchro
+PC7.Mode=Slave_8_bits_External_Synchro
 PC7.Signal=DCMI_D1
-PC8.Mode=Slave_8_bits_Embedded_Synchro
+PC8.Mode=Slave_8_bits_External_Synchro
 PC8.Signal=DCMI_D2
-PC9.Mode=Slave_8_bits_Embedded_Synchro
+PC9.Mode=Slave_8_bits_External_Synchro
 PC9.Signal=DCMI_D3
 PD10.GPIOParameters=GPIO_Label
 PD10.GPIO_Label=USB_OTG_FS_PWR_EN
 PD10.Locked=true
 PD10.Signal=GPIO_Output
-PD3.Mode=Slave_8_bits_Embedded_Synchro
+PD3.Mode=Slave_8_bits_External_Synchro
 PD3.Signal=DCMI_D5
+PD6.Locked=true
+PD6.Signal=GPIO_Output
+PD7.Locked=true
+PD7.Signal=GPIO_Output
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLINK_RX
 PD8.Locked=true
@@ -151,15 +200,11 @@ PD9.GPIO_Label=STLINK_TX
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
-PE1.GPIOParameters=GPIO_Label
-PE1.GPIO_Label=LD2 [Yellow Led]
-PE1.Locked=true
-PE1.Signal=GPIO_Output
-PE4.Mode=Slave_8_bits_Embedded_Synchro
+PE4.Mode=Slave_8_bits_External_Synchro
 PE4.Signal=DCMI_D4
-PE5.Mode=Slave_8_bits_Embedded_Synchro
+PE5.Mode=Slave_8_bits_External_Synchro
 PE5.Signal=DCMI_D6
-PE6.Mode=Slave_8_bits_Embedded_Synchro
+PE6.Mode=Slave_8_bits_External_Synchro
 PE6.Signal=DCMI_D7
 PG11.Locked=true
 PG11.Mode=RMII
@@ -204,7 +249,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_DCMI_Init-DCMI-false-HAL-true,6-MX_LPTIM1_Init-LPTIM1-false-HAL-true,7-MX_ETH_Init-ETH-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=16125000
 RCC.AHB12Freq_Value=64000000
 RCC.AHB4Freq_Value=64000000
@@ -283,6 +328,8 @@ USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
+VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Mode=Counts__internal_clock_event_00
+VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Signal=LPTIM1_VS_LPTIM_counterModeInternalClock
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-H743ZI2
